# AutoStarRailX

./: LoadGame.py  Readme.md  autofight  autostar.py  config.ini  log.txt  pyproject.toml
tests/: test.py
