[tool.poetry]
name = "autostar"
version = "0.1.0"
description = ""
authors = ["StruggleRookie <tracyhmonsmic28@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyautogui = "^0.9.54"
logging = "^0.4.9.6"
configparser = "^6.0.0"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
